# haskell-art

./: Makefile  README.md  diamondTheory.hs  diamondTheory.lhs  haskell-art.cabal  hexVariation.hs  hexVariation.lhs  hexagon.hs
src/: declarationRights.lhs  diamondTheory.lhs  hexVariation.lhs
