name:                haskell-art
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-art2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hexVariation
  hs-source-dirs:      src
  main-is:             hexVariation.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, diagrams, diagrams-lib, diagrams-svg, random
  default-language:    Haskell2010

executable diamondTheory
  hs-source-dirs:      src
  main-is:             diamondTheory.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, diagrams, diagrams-lib, diagrams-svg, random, split
  default-language:    Haskell2010

